Account handler frontend and backend added
